[gd_scene load_steps=5 format=2]

[ext_resource path="res://MainScene.tscn" type="PackedScene" id=1]
[ext_resource path="res://BeatsScene.tscn" type="PackedScene" id=2]
[ext_resource path="res://GameControl.gd" type="Script" id=3]
[ext_resource path="res://MainCamera.gd" type="Script" id=4]

[node name="GameControl" type="Node2D"]
script = ExtResource( 3 )

[node name="MainContainer" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="MainContainer"]
size = Vector2( 1920, 1080 )
own_world = true
handle_input_locally = false
usage = 0
render_target_update_mode = 3

[node name="MainScene" parent="MainContainer/Viewport" instance=ExtResource( 1 )]

[node name="Camera2D" type="Camera2D" parent="MainContainer/Viewport"]
current = true
script = ExtResource( 4 )

[node name="BeatsContainer" type="ViewportContainer" parent="."]
anchor_bottom = 1.0
margin_right = 200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="BeatsContainer"]
size = Vector2( 200, 1080 )
own_world = true
transparent_bg = true
handle_input_locally = false
usage = 0
render_target_update_mode = 3

[node name="BeatsScene" parent="BeatsContainer/Viewport" instance=ExtResource( 2 )]
z_index = 1

[node name="Camera2D" type="Camera2D" parent="BeatsContainer/Viewport"]
position = Vector2( 100, 540 )
current = true
